# scrapper_threading

./: .gitignore  README.md  config.py  main.py  pyproject.toml  test.ipynb
database/: docker-compose.yml
workers/: postgres_worker.py  wiki_worker.py  yahoo_finance_worker.py
